# ratchet-datafusion

./: .gitignore  README.md
config/: server.json
datafusion/src/client/: Cargo.toml
datafusion/src/common/src/: commands.rs  lib.rs
datafusion/src/server/: Cargo.toml
datafusion/src/tpch/: Cargo.toml  README.md  criu_installation.sh  tpch_perf.sh
duckdb/: README.md  demo.py
duckdb/tpch/: tpch_data.py  tpch_perf.py
duckdb/tpch/queries/: q1.py  q10.py  q11.py  q12.py  q13.py  q14.py  q15.py  q16.py  q17.py  q18.py  q19.py  q2.py  q20.py  q21.py  q22.py  q3.py  q4.py  q5.py  q6.py  q7.py  q8.py  q9.py
src/client/: Cargo.toml
src/client/src/: main.rs
src/common/: Cargo.toml
src/common/src/: commands.rs
src/server/: Cargo.toml
src/server/src/: main.rs
src/tpch/: Cargo.toml  README.md  clean_cache.sh  criu_installation.sh  criu_tpch_perf.sh  tpch_perf.sh
src/tpch/src/: main.rs
