[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.80"
serde_cbor = "0.11.2"
log = "0.4.16"