[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.13"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.80"
serde_cbor = "0.11.2"
rustyline = "9.1.2"
log = "0.4.16"
env_logger = "0.9.0"
common = { path = "../common" }