[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.13"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.80"
log = "0.4.16"
env_logger = "0.9.0"
datafusion = "13.0.0"
tokio = "1.0"