[package]
name = "tpch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
datafusion = "14.0.0"
num_cpus = "1.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
parquet = "27.0.0"
log = "0.4.0"
env_logger = "0.9.0"